kubernetes/dep_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend-pod
          image: srjowy/cliente-crate
          ports:
            - containerPort: 4201
