kubernetes/dep_crate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-crate
spec:
  replicas: 1
  selector:
    matchLabels:
      component: crate
    template:
      metadata:
        labels:
          component: crate
      spec:
        volumes:
          - name: almacenamiento-bd
            persistentVolumeClaim:
              claimName: data-crate-vp
        containers:
          - name: mi-crate-pod
            image: crate
            command: ["/bin/sh"]
            args: ["crate", "-Cdiscovery.type=single-node", "-Cnetwork.host=_site_"]
            ports:
              - containerPort: 4200
            volumeMounts:
              - name: almacenamiento-bd
                mountPath: /db-data
