kubernetes/systemd-cgroup-gc.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: systemd-cgroup-gc
  labels:
    tier: management
    app: systemd-cgroup-gc
spec:
  selector:
    matchLabels:
      name: systemd-cgroup-gc
  template:
    metadata:
      labels:
        name: systemd-cgroup-gc
    spec:
      hostPID: true
      containers:
        - resources:
            requests:
              cpu: 5m
              memory: 500Ki
            limits:
              cpu: 5m
              memory: 50Mi  # This crashes on startup with a 5Mi limit, but only uses about 320Ki after that.
          securityContext:
            privileged: true
          image: ubuntu:16.04
          name: systemd-cgroup-gc
          command: ["/bin/bash", "-c"]
          args:
            - |
              while true; do
                /usr/local/bin/systemd-cgroup-gc
                sleep 3600 # Run hourly.
              done
          volumeMounts:
            - name: scriptsrc
              mountPath: /usr/local/bin
            - name: kubeletpath
              mountPath: /var/lib/kubelet/pods
      volumes:
        - name: scriptsrc
          configMap:
            name: systemd-cgroup-gc
            defaultMode: 0755
        - name: kubeletpath
          hostPath:
            path: /var/lib/kubelet/pods
            type: Directory
