kubernetes/cluster-ip-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: c-ip-backend

spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 4201
    targetPort: 4201
