kubernetes/cluster-ip-crate.yml
apiVersion: v1
kind: Service
metadata:
  name: c-ip-crate

spec:
  type: ClusterIP
  selector:
    component: crate
  ports:
  - port: 4200
    targetPort: 4200
