kubernetes/cluster-ip-web.yml
apiVersion: v1
kind: Service
metadata:
  name: c-ip-web

spec:
  type: ClusterIP
  clusterIP: 10.96.0.6
  selector:
    component: web
  ports:
  - port: 8080
    targetPort: 80
